k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectkeystone
  labels:
    name: projectkeystone
    app: hmas
    environment: production
